[project]
name = "enumerate-iam"
version = "2.0.0"
description = "Enumerate IAM permissions for AWS credentials"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Andres Riancho", email = "andres@riancho.com" }
]
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
]

[project.scripts]
enumerate-iam = "enumerate_iam.cli:main"

[project.urls]
Homepage = "https://github.com/andresriancho/enumerate-iam"
Repository = "https://github.com/andresriancho/enumerate-iam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["enumerate_iam"]
